--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 * {
     margin: 0;
     padding: 0;
     font-size: 82.5;
+    font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -22,6 +24,7 @@ h1 {
 }
 
 #start {
+    font-weight: bold;
     display: block;
     margin: 2vh auto;
     width: 100px;
